--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
 <body>
     <h1>This sis a tutorial on github</h1>
 </body>
+<script src="feature-1.js"></script>
+<script src="feature-2.js"></script>
 
 </html>
